2005-06-17  John Dennis  <jdennis@redhat.com>

	Fixes for bug #3057
	
	* admin-tool/editorwindow.py: in ProfileModel:reload if get_source
	fails try calling get_delegate
	  
	* lib/storage.py: break extract() into two parts, new function
	get_extract_src_path() computes the path to the file/directory
	requested for extraction, extract() now calls
	get_extract_src_path() and then just does the copy
	operation. get_extract_src_path() can now be used by other code to
	get a path to the file in the profile without having to copy to a
	destination, this is useful if all you want to do is read the file.
	
	* lib/userprofile.py: add UserProfile:get_delegate &
	ProfileSource:get_delegate()
	
	* lib/sources/mozillasource.py: remove internationalization of
	Firefox name, implement get_path_description


2005-06-16  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sessionwindow.py:
	(SessionWindow.__init__): set the window's title
	and icon
	(SessionWindow.__handle_key_press),
	(SessionWindow.__handle_key_press): improve debug
	spew.
	
	* lib/config.py.in: pass through metacity debug
	environment variables to the prototype session.

2005-06-15  Mark McLoughlin  <markmc@redhat.com>

	* sabayon.spec.in: need to BuildRequires pygtk2-devel
	too

2005-06-15  Mark McLoughlin  <markmc@redhat.com>

	* sabayon.spec.in: update

2005-06-14  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sessionwindow.py: fix debug spew.

2005-06-14  Mark McLoughlin  <markmc@redhat.com>

	Add all sorts of crackrock to fix focus handling with
	the embedded Xnest.

	The strategy is simple - any GTK key events received
	on the window (which we're using as the root window
	for the embedded session) should get sent back to
	the window again using XSendEvent()

	The reason for needing to do this is because the
	pseudo-root window itself is not the keyboard focus
	window, which it would be with plain old Xnest. Instead
	GTK+'s focus proxy receives the X event, Xnest never